Cycles OSL renders a black image #42021

Closed
opened 2014-09-30 02:20:49 +02:00 by Pavel · 18 comments

System Information
Operating system and graphics card
Windows 7x64, Intel HD Graphics 2000

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
2.72 eb464ee, eb464ee.PNG 2.72 21825c4, 21825с4.PNG 2.72 0334be9. 0334be9.PNG

Worked: (optional)
2.71 f0f398d, f0f398d.png 2.72 6f2f808. 6f2f808.png

Short description of error
Cycles OSL renders a black image

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Open default scene, select Cycles Render, enable OSL, click Render.

**System Information** Operating system and graphics card Windows 7x64, Intel HD Graphics 2000 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 2.72 eb464ee, ![eb464ee.PNG](https://archive.blender.org/developer/F113679/eb464ee.PNG) 2.72 21825c4, ![21825с4.PNG](https://archive.blender.org/developer/F113677/21825с4.PNG) 2.72 0334be9. ![0334be9.PNG](https://archive.blender.org/developer/F113681/0334be9.PNG) Worked: (optional) 2.71 f0f398d, ![f0f398d.png](https://archive.blender.org/developer/F113684/f0f398d.png) 2.72 6f2f808. ![6f2f808.png](https://archive.blender.org/developer/F113685/6f2f808.png) **Short description of error** Cycles OSL renders a black image **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Open default scene, select Cycles Render, enable OSL, click Render.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Pavel self-assigned this 2014-09-30 02:20:49 +02:00
Author

Added subscriber: @pavelhedgehog

Added subscriber: @pavelhedgehog

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I cannot confirm this, it works fine here.

Windows 7 x64, 56a5f17

I cannot confirm this, it works fine here. Windows 7 x64, 56a5f17

Added subscriber: @mont29

Added subscriber: @mont29

Please try with starting Blender from console with factory settings (--factory-startup option). And please report any message from the console.

Please try with starting Blender from console with factory settings (`--factory-startup` option). And please report any message from the console.
Author

{F113777}2.72 eb464ee Blender 2.72 Release Candidate, Broken
{F113781}2.72 6f2f808 build 24 september 2014 buildbot Worked
{F113783}2.72 21825c4 build 27 september 2014 buildbot Broken
{F113779}2.72 0334be9 build 29 september 2014 buildbot Broken

{[F113777](https://archive.blender.org/developer/F113777/eb464ee_-_Blender_2.72_Release_Candidate.PNG)}2.72 eb464ee Blender 2.72 Release Candidate, Broken {[F113781](https://archive.blender.org/developer/F113781/console_6f2f808.PNG)}2.72 6f2f808 build 24 september 2014 buildbot Worked {[F113783](https://archive.blender.org/developer/F113783/console_21825c4.PNG)}2.72 21825c4 build 27 september 2014 buildbot Broken {[F113779](https://archive.blender.org/developer/F113779/console_0334be9.PNG)}2.72 0334be9 build 29 september 2014 buildbot Broken

Yuck! that would look like yet another issue with non-ascii paths and windows…

Yuck! that would look like yet another issue with non-ascii paths and windows…

Added subscribers: @ideasman42, @MartijnBerger

Added subscribers: @ideasman42, @MartijnBerger

Campbell, you did some fixes in windows path handling recently, could it have caused that?

Campbell, you did some fixes in windows path handling recently, could it have caused that?
Pavel was unassigned by Bastien Montagne 2014-09-30 16:23:25 +02:00
Author

console-805bb22.PNG 2.72 805bb22 build buildbot 2 october 2014 broken.

![console-805bb22.PNG](https://archive.blender.org/developer/F114188/console-805bb22.PNG) 2.72 805bb22 build buildbot 2 october 2014 broken.
Author

Blender 2.72 Release - error is not corrected.2.72.PNG
Blender-2.72-dde740b-win64 - error is not corrected.dde740b.PNG

Blender 2.72 Release - error is not corrected.![2.72.PNG](https://archive.blender.org/developer/F115095/2.72.PNG) Blender-2.72-dde740b-win64 - error is not corrected.![dde740b.PNG](https://archive.blender.org/developer/F115097/dde740b.PNG)
Author

2.72 4c60aae buildbot 7 october - error is not corrected. console_4c60aae.PNG
2.72 fe93947 buildbot 9 october - error is not corrected. console_fe93947.PNG

2.72 4c60aae buildbot 7 october - error is not corrected. ![console_4c60aae.PNG](https://archive.blender.org/developer/F115642/console_4c60aae.PNG) 2.72 fe93947 buildbot 9 october - error is not corrected. ![console_fe93947.PNG](https://archive.blender.org/developer/F115640/console_fe93947.PNG)

Please do not push this report any further! We are aware of it and will fix it once we find a solution. Pushing this will not solve it any faster!

Please do *not* push this report any further! We are aware of it and will fix it once we find a solution. Pushing this will not solve it any faster!
Author

Tried today. Perhaps it will help You. If you unpack the Blender in the root of the C drive, everything works. Hence the problem in the support Cyrillic characters in file paths.

Tried today. Perhaps it will help You. If you unpack the Blender in the root of the C drive, everything works. Hence the problem in the support Cyrillic characters in file paths.

This issue was referenced by 383bd34111

This issue was referenced by 383bd34111b8d915ac4e646f26b3170b7705b023

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 383bd34111.

Closed by commit 383bd34111.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42021
No description provided.